[package]
name = "nouns"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.8"
solana-program = "=1.8.1"
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
metaplex-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex" , features = ["no-entrypoint"] }
thiserror = "1.0.29"

[dev-dependencies]
solana-client = "=1.8.1"
solana-sdk = "=1.8.1"
rand = "0.8.4"

[lib]
name = "nouns"
crate-type = ["cdylib", "lib"]
